# ql_designs

./: README.md
CH_DFSIN/: Makefile.symbiflow
Designs/: .run_designs.sh.un~  run_designs.sh  run_designs.sh~
LU32PEEng/: Makefile.symbiflow
VexRiscv/: VexRiscv.v
bitonic_mesh/: Makefile.symbiflow
conv2d_no_ksa/: adder.v  conv2d.v
dart/: Makefile.symbiflow
dart32_8x8/: Makefile.symbiflow
des90/: Makefile.symbiflow
gsm_switch/: Makefile.symbiflow
iir/: iir.v
main_loop_synth/: Makefile.symbiflow
mcml/: Makefile.symbiflow
qlf_k4n8/: CMakeLists.txt
qlf_k4n8/design_flow/: CMakeLists.txt
qlf_k4n8/design_flow/adder_8/: .CMakeLists.txt.swp  CMakeLists.txt
qlf_k4n8/design_flow/counter_16bit/: counter_16bit.v
qlf_k4n8/design_flow/dct_mac/: CMakeLists.txt
qlf_k4n8/design_flow/io_reg_tc1/: CMakeLists.txt
qlf_k4n8/design_flow/io_tc1/: CMakeLists.txt
qlf_k4n8/features/: CMakeLists.txt
qlf_k4n8/synth_flow/: CMakeLists.txt
qlf_k4n8/synth_flow/adder_8/: CMakeLists.txt
sctag/: Makefile.symbiflow
stereovision2/: Makefile.symbiflow
ucsb_152_tap_fir/: Makefile.symbiflow
