add_custom_target(all_qlf_k4n8_test_no_adder)
add_custom_target(all_qlf_k4n8_test_adder)
add_dependencies(all_quicklogic_tests all_qlf_k4n8_test_no_adder)
add_dependencies(all_quicklogic_tests all_qlf_k4n8_test_adder)

add_subdirectory(counter_16bit)
add_subdirectory(adder_8)
add_subdirectory(adder_64)
add_subdirectory(adder_128)
add_subdirectory(adder_FFs)
add_subdirectory(and2)
add_subdirectory(and2_latch)
add_subdirectory(bin2bcd)
add_subdirectory(clock_tree_design)
add_subdirectory(full_adder)
add_subdirectory(io_reg)
add_subdirectory(io_reg_tc1)
add_subdirectory(io_tc1)
#add_subdirectory(multi_enc_decx2x4)
add_subdirectory(routing_test)
add_subdirectory(shift_reg_8)
add_subdirectory(shift_reg_576)
add_subdirectory(multiplier_8bit)
add_subdirectory(top_120_13)
add_subdirectory(lut4_8ffs)
add_subdirectory(shift_reg_1024)
add_subdirectory(rs_decoder_1)
